--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ rand = { version = "0.8.3" }
 webbrowser = { version = "0.8", features = ["hardened"] }
 
 bevy_atmosphere = { version = "0.8" }
+tokio = { version = "1.35", features = ["sync"] }
 
 futures-lite = "2.0.1"
 
