--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,12 +79,13 @@ futures-lite = "2.0.1"
 bevy_editor_pls = { version = "0.7", optional = true }
 bevy_egui = { version = "0.24", optional = true }
 
+fast-surface-nets = { version = "0.2" }
+
 # keep the following in sync with Bevy's dependencies
 winit = { version = "0.28.7", default-features = false }
 image = { version = "0.24", default-features = false }
 
 noise = { version = "0.8" }
-ndshape = { version = "0.3" }
 
 bevy_xpbd_3d = "0.3"
 
